fix: calendly ui embedded & meeting status removed
